    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

 */
 
 Short descrition
 + New Function
 * Updated Function
 - Removed Function

0.6
* Dist fix to include all necessary files

0.5
* Bugfix db save
* remove empty rows automatically
* Change Table field style for booleans 
* delete feeds in config frame from db
* store feeds from config frame to db
* add and change feeds in config frame
* new column to the feed table: id
* Config frame add row and delete row
* Config frame add button
* shutdown bug if thread never was started
* Display saved Feeds in config frame
* Monitor select feeds
+ FeedDAO
* equals and hash of Feed and News
* link between Feed and News
+ Storing time settings
+ Apptitle and version from manifest
+ Storing properties
+ Language Selection
+ loading config properties
+ Captions loaded by caption classes
+ supporting of languagefiles
* ConfigFrame JCalendar
* ConfigFrame captions encapsulated 
* Feed captions

0.4
+ Config Window GUI
+ Helpwindow
+ TrayMenu
+ Using Hibernate to connect to the Database 
+ Timelogging at Startup
* access configuration modified(FileNotFoundException)
+ multilanguage support
+ access configuration
+ Shutdown
+ Monitor startup
* TrayMenu encapsulated
* TrayIcon encapsulated
+ Prepared Feed Monitor
+ Implemented the Feed
+ ReferenceCollection added and integrated
+ Log4j and HSQL DB integrated
+ TrayRSSSplashScreen - controls the actions on the splash screen
+ Week - manages the days the feed should be monitored on
+ StartUp<startLog> - Log4j Logger added
+ IconChanger - change the Icon of the systemtray

0.3 finished on 04/23/09
+ balloon tips added

0.2
+ only textual output
+ add feeds
+ get feedinfos with rome

0.1
+ trayicon added
+ splashscreen added